force-app/main/default/objects/Lead/fields/Motivo_de_Desqualifica_o__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Desqualifica_o__c</fullName>
    <label>Motivo de Desqualificação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aderência do público</fullName>
            </value>
            <value>
                <fullName>Atividades incompatíveis para Estágio e/ou Aprendizagem</fullName>
            </value>
            <value>
                <fullName>Atraso</fullName>
            </value>
            <value>
                <fullName>Calendário</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo ES</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo MG</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo PE</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo PR</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo RJ</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo RS</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo SC</fullName>
            </value>
            <value>
                <fullName>Concorrência - não identificado</fullName>
            </value>
            <value>
                <fullName>Concorrente Modelo de Atendimento</fullName>
            </value>
            <value>
                <fullName>Concorrente Preço</fullName>
            </value>
            <value>
                <fullName>Contratação CLT</fullName>
            </value>
            <value>
                <fullName>Dúvidas sobre vagas</fullName>
            </value>
            <value>
                <fullName>Empresa deseja contratar 100% home office</fullName>
            </value>
            <value>
                <fullName>Engano</fullName>
            </value>
            <value>
                <fullName>Estudante</fullName>
            </value>
            <value>
                <fullName>É uma Empresa Ativa/Inativa</fullName>
            </value>
            <value>
                <fullName>Experiência na Expo 2020</fullName>
            </value>
            <value>
                <fullName>Falta de retorno</fullName>
            </value>
            <value>
                <fullName>Lead duplicado</fullName>
            </value>
            <value>
                <fullName>Não demonstrou interesse</fullName>
            </value>
            <value>
                <fullName>Orçamento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Momento inoportuno para empresa</fullName>
                <label>Perdeu o interesse, no momento</label>
            </value>
            <value>
                <fullName>Sem previsão para contratação</fullName>
            </value>
            <value>
                <fullName>Serviço gratuito</fullName>
            </value>
            <value>
                <fullName>Tentativas excedidas de contato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>