force-app/main/default/objects/Lead/fields/Motivo_de_Desqualifica_o_Feiras__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Desqualifica_o_Feiras__c</fullName>
    <label>Motivo de Desqualificação (Feiras)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aderência do público</fullName>
            </value>
            <value>
                <fullName>Calendário</fullName>
            </value>
            <value>
                <fullName>Orçamento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>