force-app/main/default/objects/Lead/fields/NomeDaCampanha__c.field-meta.xml
<CustomField>
    <fullName>NomeDaCampanha__c</fullName>
    <label>Nome da Campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>