force-app/main/default/objects/Lead/fields/NomeFantasiaMap__c.field-meta.xml
<CustomField>
    <fullName>NomeFantasiaMap__c</fullName>
    <formula>Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NomeFantasiaMap</label>
    <type>Text</type>
</CustomField>