force-app/main/default/objects/Lead/fields/NomeResponsavelDaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NomeResponsavelDaEmpresa__c</fullName>
    <label>Nome do responsável da empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>