force-app/main/default/objects/Lead/fields/NomeResponsavelPelaContratacao__c.field-meta.xml
<CustomField>
    <fullName>NomeResponsavelPelaContratacao__c</fullName>
    <inlineHelpText>Ex: RH</inlineHelpText>
    <label>Nome do responsável pela contratação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>