force-app/main/default/objects/Lead/fields/Outro__c.field-meta.xml
<CustomField>
    <fullName>Outro__c</fullName>
    <inlineHelpText>Informar qual seria o Interesse Principal</inlineHelpText>
    <label>Outro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>