force-app/main/default/objects/Lead/fields/Outros_Feiras__c.field-meta.xml
<CustomField>
    <fullName>Outros_Feiras__c</fullName>
    <label>Outros (Feiras)</label>
    <type>TextArea</type>
</CustomField>