force-app/main/default/objects/Lead/fields/outrosInteresses__c.field-meta.xml
<CustomField>
    <fullName>outrosInteresses__c</fullName>
    <label>Outros interesses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estágio</fullName>
            </value>
            <value>
                <fullName>Aprendiz</fullName>
            </value>
            <value>
                <fullName>Estágio e Aprendiz</fullName>
            </value>
            <value>
                <fullName>Inclui</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>Expo</fullName>
            </value>
            <value>
                <fullName>Agro/magarefe</fullName>
                <isActive>false</isActive>
                <label>Agro/magarefe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>