force-app/main/default/objects/Lead/fields/Prospect_Qualificado__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Qualificado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quando selecionado, esse campo indica que o lead foi gerado pela qualificação de um prospect.</description>
    <inlineHelpText>Quando selecionado, esse campo indica que o lead foi gerado pela qualificação de um prospect.</inlineHelpText>
    <label>Prospect Qualificado?</label>
    <type>Checkbox</type>
</CustomField>