force-app/main/default/objects/Lead/fields/Qual_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Qual_concorrente__c</fullName>
    <label>Qual concorrente?</label>
    <type>TextArea</type>
</CustomField>