force-app/main/default/objects/Lead/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Água</fullName>
            </value>
            <value>
                <fullName>Alimentação</fullName>
            </value>
            <value>
                <fullName>Coleta de Lixo</fullName>
            </value>
            <value>
                <fullName>Comércio e Varejo</fullName>
            </value>
            <value>
                <fullName>Energia</fullName>
            </value>
            <value>
                <fullName>Funerário</fullName>
            </value>
            <value>
                <fullName>Imprensa</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Produção</fullName>
            </value>
            <value>
                <fullName>Saúde</fullName>
            </value>
            <value>
                <fullName>Segurança</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Telecomunicação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>