force-app/main/default/objects/Lead/fields/RoundMidia__c.field-meta.xml
<CustomField>
    <fullName>RoundMidia__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>RoundMidia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>