force-app/main/default/objects/Lead/fields/RoundNumber__c.field-meta.xml
<CustomField>
    <fullName>RoundNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RoundNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>