force-app/main/default/objects/Lead/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Energia</fullName>
            </value>
            <value>
                <fullName>Educação</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Finanças</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>