force-app/main/default/objects/Lead/fields/Tipo_da_Empresa1__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Empresa1__c</fullName>
    <label>Tipo da Empresa1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privada</fullName>
                <default>true</default>
                <label>Privada</label>
            </value>
            <value>
                <fullName>Pública</fullName>
            </value>
            <value>
                <fullName>Economia Mista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>