force-app/main/default/objects/Lead/fields/Trabalha_com_o_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Trabalha_com_o_concorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trabalha com o concorrente?</label>
    <type>Checkbox</type>
</CustomField>