force-app/main/default/objects/Lead/fields/Unidade_CIEE__c.field-meta.xml
<CustomField>
    <fullName>Unidade_CIEE__c</fullName>
    <label>Unidade de Atendimento1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aracaju</fullName>
            </value>
            <value>
                <fullName>Barueri</fullName>
            </value>
            <value>
                <fullName>Bauru</fullName>
            </value>
            <value>
                <fullName>Belém</fullName>
            </value>
            <value>
                <fullName>Brasília</fullName>
            </value>
            <value>
                <fullName>Campinas</fullName>
            </value>
            <value>
                <fullName>Campo Grande</fullName>
            </value>
            <value>
                <fullName>Cuiabá</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Goiânia</fullName>
            </value>
            <value>
                <fullName>Guarulhos</fullName>
            </value>
            <value>
                <fullName>Inclusão Social</fullName>
            </value>
            <value>
                <fullName>João Pessoa</fullName>
            </value>
            <value>
                <fullName>Jundiaí</fullName>
            </value>
            <value>
                <fullName>Maceió</fullName>
            </value>
            <value>
                <fullName>Manaus</fullName>
            </value>
            <value>
                <fullName>Marília</fullName>
            </value>
            <value>
                <fullName>Mogi Guaçu</fullName>
            </value>
            <value>
                <fullName>Natal</fullName>
            </value>
            <value>
                <fullName>Piracicaba</fullName>
            </value>
            <value>
                <fullName>Porto Velho</fullName>
            </value>
            <value>
                <fullName>Presidente Prudente</fullName>
            </value>
            <value>
                <fullName>Ribeirão Preto</fullName>
            </value>
            <value>
                <fullName>Salvador</fullName>
            </value>
            <value>
                <fullName>Santos</fullName>
            </value>
            <value>
                <fullName>São Caetano do Sul</fullName>
            </value>
            <value>
                <fullName>São José do Rio Preto</fullName>
            </value>
            <value>
                <fullName>São José dos Campos</fullName>
            </value>
            <value>
                <fullName>São Luís</fullName>
            </value>
            <value>
                <fullName>São Paulo Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>