force-app/main/default/objects/Lead/fields/Unidades_de_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Unidades_de_Atendimento__c</fullName>
    <label>Unidade de Atendimento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gerencia_Regional__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Unidades_de_Atendimento</valueSetName>
    </valueSet>
</CustomField>