force-app/main/default/objects/Lead/recordTypes/Leads_de_Feiras.recordType-meta.xml
<RecordType>
    <fullName>Leads_de_Feiras</fullName>
    <active>true</active>
    <businessProcess>Processo de lead de Feiras</businessProcess>
    <description>Usar para registrar leads de Feiras</description>
    <label>Leads de Feiras</label>
</RecordType>