force-app/main/default/objects/Lead/recordTypes/Leads_do_Atendimento.recordType-meta.xml
<RecordType>
    <fullName>Leads_do_Atendimento</fullName>
    <active>true</active>
    <businessProcess>Processo de vendas do Atendimento</businessProcess>
    <description>Usar para registrar leads do Atendimento</description>
    <label>Leads do Atendimento</label>
</RecordType>