force-app/main/default/objects/Lead/validationRules/CNPJ_min_max.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_min_max</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( CNPJ_CPF__c )),
     (LEN( CNPJ_CPF__c ) &lt; 11) || (LEN( CNPJ_CPF__c ) &gt; 18)
)</errorConditionFormula>
    <errorDisplayField>CNPJ_CPF__c</errorDisplayField>
    <errorMessage>O campo deve ter no Mínimo 11 e Máximo 18.</errorMessage>
</ValidationRule>