force-app/main/default/objects/Lead/validationRules/CPF_min_max.validationRule-meta.xml
<ValidationRule>
    <fullName>CPF_min_max</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(CPF__c)),
     (LEN(CPF__c) &lt; 11) || (LEN(CPF__c ) &gt; 14))</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>O CPF deve conter no mínimo 11 e no máximo 14.</errorMessage>
</ValidationRule>