force-app/main/default/objects/Lead/validationRules/Email_ou_Telefone.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_ou_Telefone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISBLANK(Phone), ISBLANK(Email))</errorConditionFormula>
    <errorMessage>preenchimento obrigatório do Telefone ou Email</errorMessage>
</ValidationRule>