force-app/main/default/objects/Lead/validationRules/endereco_e_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>endereco_e_obrigatorio</fullName>
    <active>false</active>
    <description>Esta regra foi criada para tornar este campo obrigatório</description>
    <errorConditionFormula>OR(
ISBLANK(Street ),
ISBLANK( State ),
ISBLANK( Country ),
ISBLANK( PostalCode ),
ISBLANK( City ))</errorConditionFormula>
    <errorMessage>Obrigatório preencher endereço completo.</errorMessage>
</ValidationRule>