force-app/main/default/objects/Lead/validationRules/Endereco_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Endereco_obrigatorio</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Street)</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>Por favor preencha o endereço</errorMessage>
</ValidationRule>