force-app/main/default/objects/Lead/validationRules/Justificativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Justificativa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(($Permission.Bypass_Permission = False),
AND(
ISPICKVAL(Motivo_de_Desqualifica_o__c , &quot;Outros&quot;),
ISBLANK(Justificativa__c)))</errorConditionFormula>
    <errorDisplayField>Justificativa__c</errorDisplayField>
    <errorMessage>Ao escolher &quot;Outros&quot;, é obrigatório justificar o motivo de desqualificação</errorMessage>
</ValidationRule>