force-app/main/default/objects/Lead/validationRules/Min_Max_CEP.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Max_CEP</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PostalCode)),
     (LEN(PostalCode) &lt; 8) || (LEN(PostalCode) &gt; 10)
)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>O CEP deve ser preenchido com o mínimo de 8 e máximo 9.</errorMessage>
</ValidationRule>