force-app/main/default/objects/Lead/validationRules/telefone_min_max.validationRule-meta.xml
<ValidationRule>
    <fullName>telefone_min_max</fullName>
    <active>false</active>
    <description>Essa regra determina o número máximo e mínimo de números a serem preenchidos no campo telefone.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
     (LEN(Phone) &lt; 8) || (LEN(Phone) &gt; 16)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>O número mínimo a ser preenchido deverá ser 8 e o máximo 16.</errorMessage>
</ValidationRule>