force-app/main/default/objects/Lead/validationRules/Valida_Formato_Telefone.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Formato_Telefone</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK( Phone ),
REGEX( Phone ,&quot;\\([0-9]{2}\\)( )[0-9]{4}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Formato incorreto</errorMessage>
</ValidationRule>