force-app/main/default/objects/Lead/validationRules/Valida_Motivo_Unidade.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Motivo_Unidade</fullName>
    <active>true</active>
    <description>Essa regra torna obrigatório o campo Motivo Unidade quando o lead é encaminhado para a Unidade.</description>
    <errorConditionFormula>AND(($Permission.Bypass_Permission = False),
AND(
Unidade__c,
ISBLANK(TEXT(Motivo_Unidade__c))
))</errorConditionFormula>
    <errorDisplayField>Motivo_Unidade__c</errorDisplayField>
    <errorMessage>É necessário preencher o campo Motivo Unidade.</errorMessage>
</ValidationRule>