force-app/main/default/objects/Lead/listViews/Leads_de_Feiras.listView-meta.xml
<ListView>
    <fullName>Leads_de_Feiras</fullName>
    <columns>FULL_NAME</columns>
    <columns>NomeFantasia__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Leads_de_Feiras</value>
    </filters>
    <label>Leads Feiras</label>
    <sharedTo>
        <role>Feiras</role>
    </sharedTo>
</ListView>