force-app/main/default/objects/Lead/listViews/Leads_Inclui_CIEE.listView-meta.xml
<ListView>
    <fullName>Leads_Inclui_CIEE</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>LCris,Ide S,mnasc,bceza,mmura</value>
    </filters>
    <label>Leads Inclui CIEE</label>
    <sharedTo>
        <role>Inclusao_Social</role>
    </sharedTo>
</ListView>