force-app/main/default/objects/Lead/listViews/Meus_leads.listView-meta.xml
<ListView>
    <fullName>Meus_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Meus leads</label>
</ListView>