force-app/main/default/objects/Lead/listViews/One_Lead.listView-meta.xml
<ListView>
    <fullName>One_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>One</label>
    <queue>One</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>