force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>NomeDaCampanha__c</columns>
    <columns>DataEHoraDeCriacaoDoLead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/2/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>notContain</operation>
        <value>Expositor Expo CIEE,Sales Navigator - LinkedIn</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Novo_nao_contatado,Novo - Não contatado,Trabalhando_contatado,Trabalhando - Contatado,Em espera - Coronavírus,Desqualificado,Convertido</value>
    </filters>
    <label>Leads de hoje</label>
</ListView>